# custom_godot_engine

./: .gitignore  CMakeLists.txt  README.md
core/: document_data.hpp  typedefs.hpp
core/error/: error_list.cpp  error_list.hpp  error_macros.cpp  error_macros.hpp
core/input/: input_enums.hpp
core/io/: compression.hpp  file_access.hpp  logger.hpp  xml_parser.hpp
core/object/: class_db.hpp  object_id.hpp  ref_counted.hpp  script_language.hpp
core/os/: memory.hpp
core/string/: char_range.inc  ustring.hpp
core/templates/: cowdata.hpp  safe_refcount.hpp  search_array.hpp  sort_array.hpp  vector.hpp
core/variant/: array.cpp  array.hpp  container_type_validate.hpp
documentations/: document.txt
drivers/: drivers.cpp
editor/: editor.cpp
misc/: misc.cpp
modules/: modules.cpp
platform/: platform.cpp
platform/android/: platform_config.hpp
scene/: scene.cpp
servers/: servers.cpp
tests/: tests.cpp
